# curiosity_detection_image

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  core_loop.py  dev.sh  pyproject.toml  reachy_companion.py
agents/: body_agent.py  butterfly_agent.py  identify_agent.py  log_agent.py  nav_agent.py  rover_agent.py
demos/: example_demo.json
utils/: base_agent.py  behavior_registry.py  claude_agent_mixin.py  command_bus.py  demo_script.py  interest_detector.py  tts.py
